# esolution-invoice-ai

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
project_2/: .gitignore  Makefile  README.md  docker-compose.yml  render.yaml  start.sh
project_2/agent/: Dockerfile  README.md  pyproject.toml
project_2/agent/src/: __init__.py  agent.py  api.py  config.py  mcp_client.py  prompts.py  state.py
project_2/agent/tests/: test_agent.py
project_2/mcp-server/: .dockerignore  Dockerfile  README.md  pyproject.toml
project_2/mcp-server/src/: __init__.py  config.py  server.py
project_2/mcp-server/src/auth/: jwt_handler.py  middleware.py  models.py  oauth_server.py  scopes.py
project_2/mcp-server/src/prompts/: collection_advisor.py  invoice_assistant.py
project_2/mcp-server/src/resources/: business_summary.py  overdue_report.py
project_2/mcp-server/src/security/: audit_logger.py  input_validator.py  rate_limiter.py  ssrf_guard.py
project_2/mcp-server/src/services/: __init__.py  email_service.py  gemini_service.py  groq_service.py
project_2/mcp-server/src/sheets/: __init__.py  client.py  invoice_model.py  karma_model.py
project_2/mcp-server/src/tools/: analytics_tools.py  document_tools.py  invoice_read_tools.py  invoice_write_tools.py  karma_tools.py  reminder_tools.py
project_2/mcp-server/tests/: conftest.py  test_auth.py  test_rate_limiter.py  test_security.py  test_sheets_models.py  test_ssrf_guard.py  test_tools.py
scripts/: auto-reminder-cron.gs  debug-sheet.js  gmail-emotion-watcher.gs  reproduce-issue.js  seed-data.mjs
src/app/: globals.css  (+2 more)
(+75 files in other folders)
