[project]
name = "esolution-agent"
version = "1.0.0"
description = "LangGraph agent (Groq Llama 3.3 70B) that connects to the ESolution MCP server as an OAuth-authenticated client"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0",
    "langchain-mcp-adapters>=0.3",
    "langchain-groq>=1.0",
    "langchain-core>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["src*"]
