[project]
name = "esolution-mcp"
version = "1.0.0"
description = "ESolution - secure, OAuth-protected MCP server for freelancer invoice management (Google Sheets backend)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "gspread>=6.0",
    "google-auth>=2.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "structlog>=24.1",
    "pyjwt>=2.8",
    "cryptography>=42.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["src*"]
